# Hackster

./: README.md  calcul.py  index.html  main.py  mc-runner.bat  package-lock.json  package.json  pyproject.toml  vite.config.ts
Craft/: craft.db
SpeedTest/: main.py
assets/: index-BZIRFEey.js  index-BoR4eTxl.js  index-DdyaJJwR.js  index-FEVWLUiP.js  index-PMJlVAwk.css  index-lzZg0WCL.js  index-pxIJ49Z6.css
src/: App.css  App.tsx  index.css  main.tsx
src/features/: Commands.tsx
